--- a/about.html
+++ b/about.html
@@ -1,27 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <!-- Same head content as index.html -->
-</head>
-<body>
-    <!-- Same nav content as index.html -->
+---
+layout: default
+title: "Our Story"
+---
 
-    <section class="content">
-        <div class="container">
-            <h1 data-aos="fade-up">Our Story</h1>
-            <p data-aos="fade-up" data-aos-delay="200">
-                nexus. Group AI enables a disruptive shift in how organizations can identify and protect against cross-sectoral shocks, providing instant, intuitive, and tailored strategic decision-making.
-            </p>
-            <!-- Add more content as needed -->
-        </div>
-    </section>
-
-    <!-- Footer -->
-    <!-- Same footer content as index.html -->
-
-    <!-- AOS Library -->
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <!-- Custom JavaScript -->
-    <script src="js/script.js"></script>
-</body>
-</html>
+<section class="content">
+    <div class="container">
+        <h1 data-aos="fade-up">Our Story</h1>
+        <p data-aos="fade-up" data-aos-delay="200">
+            nexus. Group AI enables a disruptive shift in how organizations can identify and protect against cross-sectoral shocks, providing instant, intuitive, and tailored strategic decision-making.
+        </p>
+        <!-- Add more content as needed -->
+    </div>
+</section>
