--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@ title: "Home"
     <div class="container">
         <h1 data-aos="fade-up">AI-Powered Insights<br>for Better Decisions</h1>
         <div class="hero-buttons" data-aos="fade-up" data-aos-delay="200">
-            <a href="#" class="btn primary-btn">Join Waiting List</a>
-            <a href="#" class="btn secondary-btn">Request a Demo</a>
+            <a href="https://forms.gle/LLMPqERfm5QWVsLKA" target="_blank" class="btn primary-btn">Join Waiting List</a>
+            <a href="http://meet.nexus-group.ai/" target="_blank" class="btn secondary-btn">Request a Demo</a>
         </div>
     </div>
 </section>
