--- a/contact.html
+++ b/contact.html
@@ -7,14 +7,11 @@ title: "Contact Us"
     <div class="container">
         <h1 data-aos="fade-up">Contact Us</h1>
         <p data-aos="fade-up" data-aos-delay="200">
-            We'd love to hear from you. Please reach out with any questions or inquiries.
+            Join our waiting list or request a demo to get started with nexus. Group AI solutions.
         </p>
-        <!-- Contact Form -->
-        <form action="https://formspree.io/f/your-form-id" method="POST" class="contact-form" data-aos="fade-up" data-aos-delay="400">
-            <input type="text" name="name" placeholder="Your Name" required>
-            <input type="email" name="_replyto" placeholder="Your Email" required>
-            <textarea name="message" rows="6" placeholder="Your Message" required></textarea>
-            <button type="submit" class="btn">Send Message</button>
-        </form>
+        <div class="contact-buttons" data-aos="fade-up" data-aos-delay="400">
+            <a href="https://forms.gle/LLMPqERfm5QWVsLKA" target="_blank" class="btn">Join Waiting List</a>
+            <a href="http://meet.nexus-group.ai/" target="_blank" class="btn">Request a Demo</a>
+        </div>
     </div>
 </section>
