Testing further site enhancements and cookie policies

--- a/about.html
+++ b/about.html
@@ -152,7 +152,7 @@
                 <div class="founder-card" data-aos="fade-left">
                     <div class="founder-info">
                         <h3>Orion Forowycz</h3>
-                        <span>Co-Founder & CTO</span>
+                        <span>Founder & CTO</span>
                         <p>Orion brings a dynamic blend of technical leadership, cloud engineering, and AI-driven software innovation, with a proven track record in developing scalable technology platforms. His expertise in machine learning, data architecture, and software engineering ensures IRIS delivers cutting-edge capabilities to our clients.</p>
                         <div class="founder-links">
                             <a href="#" class="social-link"><i class="fab fa-linkedin"></i></a>
