--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <link rel="apple-touch-icon" href="logo_icon.png">
     
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="analytics-consent.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
@@ -52,7 +53,7 @@
             {
                 "@type": "Person", 
                 "name": "Orion Forowycz",
-                "jobTitle": "Co-Founder & CTO"
+                "jobTitle": "Founder & CTO"
             }
         ],
         "address": {
@@ -82,7 +83,7 @@
         <nav class="container">
             <a href="#" class="logo">
                 <img src="logo_icon.png" alt="Nexus Group AI Logo">
-                <span>nexus. Group AI</span> 
+                <span>Nexus Group AI</span> 
             </a>
             <div class="nav-toggle" id="navToggle">
                 <span></span>
@@ -251,7 +252,7 @@
                 <div class="team-member" data-aos="fade-left">
                     <div class="team-info">
                         <h3>Orion Forowycz</h3>
-                        <span>Co-Founder & CTO</span>
+                        <span>Founder & CTO</span>
                         <p>Orion brings a dynamic blend of technical leadership, cloud engineering, and AI-driven software innovation, with a proven track record in developing scalable technology platforms.</p>
                     </div>
                 </div>
@@ -273,11 +274,18 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2025 Nexus Group AI. All Rights Reserved.</p>
+            <div class="footer-content">
+                <div class="footer-links">
+                    <a href="privacy-policy.html">Privacy Policy</a> |
+                    <a href="index.html#contact">Contact</a>
+                </div>
+                <p>&copy; 2025 Nexus Group AI. All Rights Reserved.</p>
+            </div>
         </div>
     </footer>
 
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script src="analytics-consent.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
