--- a/cer-directive.html
+++ b/cer-directive.html
@@ -26,6 +26,7 @@
     <link rel="apple-touch-icon" href="logo_icon.png">
     
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="analytics-consent.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
@@ -253,11 +254,18 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2025 Nexus Group AI. All Rights Reserved. | Remember, Stay Resilient.</p>
+            <div class="footer-content">
+                <div class="footer-links">
+                    <a href="privacy-policy.html">Privacy Policy</a> |
+                    <a href="index.html#contact">Contact</a>
+                </div>
+                <p>&copy; 2025 Nexus Group AI. All Rights Reserved. | Remember, Stay Resilient.</p>
+            </div>
         </div>
     </footer>
 
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script src="analytics-consent.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
