--- a/about.html
+++ b/about.html
@@ -3,7 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us - Nexus Group AI | Our Story & Vision</title>
+    <titl    </main>
+
+    <!-- Footer -->
+    <div id="footer-placeholder"></div>
+
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script src="js/components.js"></script>
+    <script src="js/script.js"></script>
+</body>
+</html>Group AI | Our Story & Vision</title>
     <meta name="description" content="Learn about Nexus Group AI's mission to pioneer transformative AI solutions for risk intelligence. Meet our founders and discover our vision for a safer, more predictable world.">
     <meta name="keywords" content="about nexus group ai, AI company, risk intelligence, founders, mission, vision">
     
@@ -22,11 +31,10 @@
     <meta property="twitter:image" content="https://nexus-group.ai/logo_full.png">
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="logo_icon.png">
-    <link rel="apple-touch-icon" href="logo_icon.png">
+    <link rel="icon" type="image/png" href="assets/images/logo_icon.png">
+    <link rel="apple-touch-icon" href="assets/images/logo_icon.png">
     
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="analytics-consent.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
@@ -34,30 +42,11 @@
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>
 <body>
+    <!-- Background Gradient -->
+    <div id="bg-placeholder"></div>
 
-    <div class="background-gradient"></div>
-
-    <header>
-        <nav class="container">
-            <a href="index.html" class="logo">
-                <img src="logo_icon.png" alt="Nexus Group AI Logo">
-                <span>nexus. Group AI</span> 
-            </a>
-            <div class="nav-toggle" id="navToggle">
-                <span></span>
-                <span></span>
-                <span></span>
-            </div>
-            <ul class="nav-links" id="navLinks">
-                <li><a href="index.html#iris">IRIS</a></li>
-                <li><a href="index.html#features">Features</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="cer-directive.html">CER Directive</a></li>
-                <li><a href="index.html#contact">Contact</a></li>
-                <li><a href="https://forms.gle/61frKmfNVvo1QioZA" class="cta-nav">Join Waiting List</a></li>
-            </ul>
-        </nav>
-    </header>
+    <!-- Navigation -->
+    <div id="nav-placeholder"></div>
 
     <main>
         <section id="hero-about" class="container">
