--- a/index.html
+++ b/index.html
@@ -23,11 +23,10 @@
     <meta property="twitter:image" content="https://nexus-group.ai/logo_full.png">
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="logo_icon.png">
-    <link rel="apple-touch-icon" href="logo_icon.png">
+    <link rel="icon" type="image/png" href="assets/images/logo_icon.png">
+    <link rel="apple-touch-icon" href="assets/images/logo_icon.png">
     
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="analytics-consent.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
@@ -76,30 +75,11 @@
     </script>
 </head>
 <body>
+    <!-- Background Gradient -->
+    <div id="bg-placeholder"></div>
 
-    <div class="background-gradient"></div>
-
-    <header>
-        <nav class="container">
-            <a href="#" class="logo">
-                <img src="logo_icon.png" alt="Nexus Group AI Logo">
-                <span>Nexus Group AI</span> 
-            </a>
-            <div class="nav-toggle" id="navToggle">
-                <span></span>
-                <span></span>
-                <span></span>
-            </div>
-            <ul class="nav-links" id="navLinks">
-                <li><a href="#iris">IRIS</a></li>
-                <li><a href="#features">Features</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="cer-directive.html">CER Directive</a></li>
-                <li><a href="#contact">Contact</a></li>
-                <li><a href="https://forms.gle/61frKmfNVvo1QioZA" class="cta-nav">Join Waiting List</a></li>
-            </ul>
-        </nav>
-    </header>
+    <!-- Navigation -->
+    <div id="nav-placeholder"></div>
 
     <main>
         <section id="hero" class="container">
@@ -272,20 +252,11 @@
         </section>
     </main>
 
-    <footer>
-        <div class="container">
-            <div class="footer-content">
-                <div class="footer-links">
-                    <a href="privacy-policy.html">Privacy Policy</a> |
-                    <a href="index.html#contact">Contact</a>
-                </div>
-                <p>&copy; 2025 Nexus Group AI. All Rights Reserved.</p>
-            </div>
-        </div>
-    </footer>
+    <!-- Footer -->
+    <div id="footer-placeholder"></div>
 
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-    <script src="analytics-consent.js"></script>
-    <script src="script.js"></script>
+    <script src="js/components.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
