--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -4,41 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Privacy Policy - Nexus Group AI</title>
-    <meta name="description" content="Privacy Policy for Nexus Group AI. Learn how we collect, use, and protect your personal information in compliance with GDPR.">
+    <meta name="description" content="Privac        </div>
+    </main>
+
+    <!-- Footer -->
+    <div id="footer-placeholder"></div>
+
+    <script src="js/components.js"></script>
+    <script src="js/script.js"></script>
+</body>
+</html>Group AI. Learn how we collect, use, and protect your personal information in compliance with GDPR.">
     <meta name="robots" content="index, follow">
     
-    <link rel="icon" type="image/png" href="logo_icon.png">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="analytics-consent.css">
+    <link rel="icon" type="image/png" href="assets/images/logo_icon.png">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 </head>
 <body>
-    <div class="background-gradient"></div>
+    <!-- Background Gradient -->
+    <div id="bg-placeholder"></div>
 
-    <header>
-        <nav class="container">
-            <a href="index.html" class="logo">
-                <img src="logo_icon.png" alt="Nexus Group AI Logo">
-                <span>Nexus Group AI</span> 
-            </a>
-            <div class="nav-toggle" id="navToggle">
-                <span></span>
-                <span></span>
-                <span></span>
-            </div>
-            <ul class="nav-links" id="navLinks">
-                <li><a href="index.html#iris">IRIS</a></li>
-                <li><a href="index.html#features">Features</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="cer-directive.html">CER Directive</a></li>
-                <li><a href="index.html#contact">Contact</a></li>
-                <li><a href="https://forms.gle/61frKmfNVvo1QioZA" class="cta-nav">Join Waiting List</a></li>
-            </ul>
-        </nav>
-    </header>
+    <!-- Navigation -->
+    <div id="nav-placeholder"></div>
 
     <main>
         <section class="legal-page container">
