Incorporate new site content

--- a/index.html
+++ b/index.html
@@ -29,10 +29,41 @@
             </a>
             <ul class="nav-links" id="navLinks">
                 <li><a href="#hero">Home</a></li>
-                <li><a href="#iris">About IRIS</a></li>
-                <li><a href="#features">Features</a></li>
-                <li><a href="#team">Team</a></li>
-                <li><a href="#contact" class="cta-nav">Contact</a></li>
+                <li class="dropdown">
+                    <a href="platform.html">Platform</a>
+                    <ul class="dropdown-menu">
+                        <li><a href="platform.html#iris">IRIS</a></li>
+                        <li><a href="platform.html#features">Features</a></li>
+                    </ul>
+                </li>
+                <li class="dropdown">
+                    <a href="solutions.html">Solutions</a>
+                    <ul class="dropdown-menu">
+                        <li><a href="solutions.html#cer">CER Directive</a></li>
+                        <li><a href="solutions.html#nis2">NIS2</a></li>
+                        <li><a href="solutions.html#dora">DORA</a></li>
+                        <li><a href="solutions.html#cera">CERA</a></li>
+                    </ul>
+                </li>
+                <li class="dropdown">
+                    <a href="resources.html">Resources</a>
+                    <ul class="dropdown-menu">
+                        <li><a href="resources.html#situation-reports">Situation Reports</a></li>
+                        <li><a href="resources.html#case-studies">Case Studies</a></li>
+                        <li><a href="resources.html#annual-reports">Annual Reports</a></li>
+                        <li><a href="resources.html#resilience-guide">Resilience Guide</a></li>
+                    </ul>
+                </li>
+                <li class="dropdown">
+                    <a href="company.html">Company</a>
+                    <ul class="dropdown-menu">
+                        <li><a href="company.html#about">About Us</a></li>
+                        <li><a href="company.html#leadership">Leadership Team</a></li>
+                        <li><a href="company.html#work-with-us">Work with Us</a></li>
+                        <li><a href="company.html#contact">Contact Us</a></li>
+                    </ul>
+                </li>
+                <li><a href="#contact" class="cta-nav">Book Demo</a></li>
             </ul>
             <div class="nav-toggle" id="navToggle">
                 <span></span>
@@ -47,11 +78,11 @@
             <div id="hero-background" class="hero-background"></div>
             <div class="container">
                 <div class="hero-content" data-aos="fade-up">
-                    <h1 class="main-headline">Navigate Uncertainty. Ensure Resilience.</h1>
+                    <h1 class="main-headline">AI-Powered Risk Intelligence for a Resilient Future</h1>
                     <p class="sub-headline">
-                        IRIS: Your AI-powered risk intelligence dashboard for a secure and resilient future. We empower critical decision-makers with tailored, actionable risk mitigation strategies.
+                        Empowering critical organisations with actionable intelligence to enhance resilience and ensure compliance with EU directives through our AI-Powered Risk Operating System.
                     </p>
-                    <a href="#features" class="cta-button">Discover IRIS</a>
+                    <a href="#contact" class="cta-button">Book Demo</a>
                 </div>
             </div>
         </section>
@@ -61,6 +92,28 @@
             <p class="section-intro" data-aos="fade-up" data-aos-delay="100">
                 The <strong>Intelligence Resilience Information System (IRIS)</strong> harnesses advanced AI to protect critical infrastructure. By integrating Open Source Intelligence (OSINT) and cross-sectoral scenario modeling, IRIS provides the real-time risk intelligence you need to anticipate, mitigate, and recover from crises efficiently.
             </p>
+        </section>
+
+        <section id="nexus-numbers" class="container">
+            <h2 data-aos="fade-up">Nexus in Numbers</h2>
+            <div class="stats-grid">
+                <div class="stat-item" data-aos="fade-up" data-aos-delay="100">
+                    <div class="stat-number">5500+</div>
+                    <div class="stat-label">Covered Risks</div>
+                </div>
+                <div class="stat-item" data-aos="fade-up" data-aos-delay="200">
+                    <div class="stat-number">250+</div>
+                    <div class="stat-label">Total Assets</div>
+                </div>
+                <div class="stat-item" data-aos="fade-up" data-aos-delay="300">
+                    <div class="stat-number">200+</div>
+                    <div class="stat-label">Countries Analysed</div>
+                </div>
+                <div class="stat-item" data-aos="fade-up" data-aos-delay="400">
+                    <div class="stat-number">80%</div>
+                    <div class="stat-label">Productivity Boost in Risk Reporting</div>
+                </div>
+            </div>
         </section>
 
         <section id="features" class="container">
@@ -85,6 +138,24 @@
                     <i class="fas fa-eye"></i>
                     <h3>Intuitive Visualization</h3>
                     <p>Simplify complex scenarios with interactive, dynamic graphical representations, making critical data easy to understand and act upon.</p>
+                </div>
+            </div>
+        </section>
+
+        <section id="product-overview" class="container">
+            <h2 data-aos="fade-up">Meet IRIS: Your AI-Powered Risk Intelligence Platform That Saves Time, Reduces Risks and Builds Trust</h2>
+            <div class="product-benefits">
+                <div class="benefit-item" data-aos="fade-right">
+                    <h3>Integrate Risk Management for Faster Resolutions</h3>
+                    <p>Unify fragmented data sources into a single risk management platform to create a holistic view of enterprise risks. Resolve threats faster, reduce potential losses, and ensure resilient, secure business operations.</p>
+                </div>
+                <div class="benefit-item" data-aos="fade-up">
+                    <h3>80% Productivity Boost—Faster Reviews, Fewer Delays</h3>
+                    <p>Automate the aggregation and analysis of up to 6 hours of manual data collection and reporting per risk assessment with the <strong>IRIS.</strong> Free up risk analysts and managers to focus on high-impact strategic threats, while providing real-time intelligence for proactive decision-making.</p>
+                </div>
+                <div class="benefit-item" data-aos="fade-left">
+                    <h3>Consistent Compliance, Stronger Customer Trust</h3>
+                    <p>Standardise risk assessment and mitigation workflows to improve accuracy, reduce oversights, and enhance auditability. Ensure a resilient, secure enterprise that builds trust with both customers, investors, and regulators.</p>
                 </div>
             </div>
         </section>
@@ -183,7 +254,57 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2025 Nexus Group AI. All Rights Reserved.</p>
+            <div class="footer-content">
+                <div class="footer-cta">
+                    <h3>Stay Resilient with Automated Risk Intelligence.</h3>
+                    <p>Talk to a Nexus expert</p>
+                    <a href="#contact" class="cta-button">Book Demo</a>
+                </div>
+                <div class="footer-links">
+                    <div class="footer-section">
+                        <h4>Platform</h4>
+                        <ul>
+                            <li><a href="platform.html">IRIS</a></li>
+                            <li><a href="platform.html#features">Features</a></li>
+                        </ul>
+                    </div>
+                    <div class="footer-section">
+                        <h4>Solutions</h4>
+                        <ul>
+                            <li><a href="solutions.html#cer">CER Directive</a></li>
+                            <li><a href="solutions.html#nis2">NIS2</a></li>
+                            <li><a href="solutions.html#dora">DORA</a></li>
+                            <li><a href="solutions.html#cera">CERA</a></li>
+                        </ul>
+                    </div>
+                    <div class="footer-section">
+                        <h4>Resources</h4>
+                        <ul>
+                            <li><a href="resources.html#situation-reports">Situation Reports</a></li>
+                            <li><a href="resources.html#case-studies">Case Studies</a></li>
+                            <li><a href="resources.html#annual-reports">Annual Reports</a></li>
+                            <li><a href="resources.html#resilience-guide">Resilience Guide</a></li>
+                        </ul>
+                    </div>
+                    <div class="footer-section">
+                        <h4>Company</h4>
+                        <ul>
+                            <li><a href="company.html#about">About Us</a></li>
+                            <li><a href="company.html#leadership">Leadership Team</a></li>
+                            <li><a href="company.html#work-with-us">Work with Us</a></li>
+                            <li><a href="company.html#contact">Contact Us</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <p>&copy; 2025 Nexus Group AI. All Rights Reserved.</p>
+                <div class="legal-links">
+                    <a href="terms.html">Terms of Service</a>
+                    <a href="privacy.html">Privacy Policy</a>
+                    <a href="imprint.html">Imprint</a>
+                </div>
+            </div>
         </div>
     </footer>
 
